Upgrade to XP 8
- Bump xpVersion to 8.0.0-B4 and version to 3.0.0-SNAPSHOT.
- Adopt the com.enonic.xp.settings 4.0.0-B1 plugin in settings.gradle and
  the xplibs.api.* catalog aliases for XP API dependencies; drop the
  per-build pin on com.enonic.xp.base.
- Bump the Gradle wrapper to 9.4.1.
- Replace removed XP 7 APIs in lib-xslt sources:
    * com.enonic.xp.xml.DomBuilder -> javax.xml DOM in MapToXmlConverter.
    * Resource.getUrl() -> openStream()-based StreamSource with the
      ResourceKey as system identifier in UriResolverImpl.
    * Drop *UrlParams.portalRequest() calls (the XP 8 url service resolves
      the request from context, as flagged by the existing TODOs).
- Migrate tests from JUnit 4 to Jupiter; replace
  com.enonic.xp.xml.DomHelper in XsltScriptTest with javax.xml DOM and a
  whitespace-stripping cleanup.
- Make MockViewFunctionService output deterministic (sorted by key) so the
  XSLT URL-functions test is stable across JVM versions; update the
  expected XML to match.
- Add releaseBranch (master + 2.x) to enonic-gradle.yml, include 2.x in
  enonic-docgen.yml, and seed docs/versions.json (stable -> 2.x,
  next -> master), mirroring the app-booster maintenance-branch pattern.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>